--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,7 @@ nav ul li .active {
 .nav-left {
   flex: 50%;
   margin-left: 25px;
-  /* mengatur lebarnya */
-}
+  }
 
 .nav-right {
   flex: 50%;
@@ -130,12 +129,14 @@ section .left h2 {
 .right .img-container {
   border-radius: 10px;
   box-shadow: 0 0 15px #cecece;
-  padding-bottom: 16px;
+  padding-bottom: 10px;
+  width: 100%;
+  height: min-content;
 }
 
 .right img {
   width: 100%;
-  height: 50%;
+  height: 40%;
   border-radius: 10px;
 }
 
@@ -149,4 +150,78 @@ section .left h2 {
   margin: 0;
   text-align: center;
   color: #001a33;
+}
+#barsmenu {
+  display: none;
+}
+.hamburger-nav-container {
+  font-size: 15px;
+  list-style-type: none;
+  display: none;
+}
+.hamburger-nav-container a {
+  color: white;
+  text-decoration: none;
+  background-color: #d3d3d3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+.hamburger-nav-container .hamburger-active {
+  color: white;
+  text-decoration: none;
+  background-color: #001a33;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+@media only screen and (max-width: 900px) {
+  .container {
+    width: 90%;
+    height: auto;
+    margin: 24px;
+  }
+  .right {
+    display: flex;
+    flex: 90%;
+    justify-content: center;
+  }
+  .left {
+    margin: 0;
+  }
+  .left h2,p {
+    text-align: justify;
+  }
+  .left .social-media {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  section {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media only screen and (max-width: 550px) {
+  .left {
+    margin: 0;
+  }
+  .left h2,p {
+    text-align: justify;
+  }
+  .left .social-media {
+    display: flex;
+    justify-content: center;
+}
+  /* .right {
+    display: none;
+  } */
+  .item-collapse {
+    display: none;
+  }
+  #barsmenu {
+    display: block;
+  }
 }
